@@ -1,6 +1,7 @@
 === Version 0.7.3
 * Enhancements
   * Improved handling of alert and confirm Javascript popups (George Shakhnazaryan)
+  * Added hover method to Element.  Browser support is limited.
 
 === Version 0.7.2 / 2012-8-1
 * Enhancements
